Bug 1188364 - Supress GC while transplanting to prevent compacting GC observing intermediate state r=terrence